<resources>
    <string name="app_name">Hostel</string>
    <string name="login">Login</string>
    <string name="sign_up">SIGN UP</string>
    <string name="email_id">Email ID</string>
    <string name="password">Password</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="blood_group">Blood group</string>
    <string name="branch">Branch</string>
    <string name="room_no">Room no</string>
    <string name="roll_no">Roll no</string>
    <string name="name">Name</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">Username</string>

    <string-array name="branches">
        <item>CSE</item>
        <item>Mechanical</item>
        <item>ECE</item>
        <item>Electrical</item>
        <item>Imsc</item>
        <item>Civil</item>
        <item>Architecture</item>
    </string-array>

    <string-array name="bloodgrp">
        <item>A+</item>
        <item>A-</item>
        <item>B+</item>
        <item>B-</item>
        <item>O+</item>
        <item>O-</item>
        <item>AB+</item>
        <item>AB-</item>
    </string-array>

    <string name="fever">Common symptoms involve: runny nose, cough, sneezing, fever, and tiredness</string>
    <string name="headache">Suffering from headache and body pain, also feeling tired</string>
    <string name="injuries">Got a cut on your body parts or got an injury</string>
    <string name="brokenbone">Broken bones cause immense pain and had to be handled carefully</string>
    <string name="mentalstress">feeling depressed and low, and need someone to talk then talk to our Psychiatry!</string>

    <string name="what_to_do_fever">take rest and drink plenty of water, don\'t work right now and have a good sleep</string>
    <string name="what_to_do_depression">get enough sleep, eat healthy food, take occasionally breaks from work and do breathing exercises</string>
    <string name="what_to_do_headache">try to avoid mobile and other gadget, wash your eyes with cold water and have a good sleep</string>
    <string name="what_to_do_injury">don\'t touch the wound with dirty hands wash it with cold water and apply dettol and have a bandage or handiplast </string>
    <string name="what_to_do_brokenbone">handle the broken area carefully and provide solid support to it and immediately contact a doctor</string>

    <string name="m1_fever">Paracetamol (fever)</string>
    <string name="m2_fever">Advil Capsule (fever)</string>
    <string name="m3_fever"><![CDATA[Benylin (cold & fever)]]></string>

    <string name="m1_depression">Just talk to our your loved ones you will feel happy :)</string>
    <string name="m2_depression">or talk to a psychiatrist</string>
    <string name="m3_depression"> </string>

    <string name="m1_headache">Fioricet</string>
    <string name="m2_headache">ibuprofen</string>
    <string name="m3_headache">Crocin Advance (body pain)</string>

    <string name="m1_injury">Dettol and bandage</string>
    <string name="m2_injury">naproxen (pain relief)</string>
    <string name="m3_injury"> </string>

    <string name="m1_brokenbone">meet a doctor first</string>
    <string name="m2_brokenbone">naproxen (pain relief)</string>
    <string name="m3_brokenbone"> </string>
    <string name="add_description">Add description</string>
    <string name="dn_desc_s">We are going to have a independence day program(celebration) in our college were events like singing , dancing,etc.. is organised as a tribute to our mother land and all our respected freedom fighters.So,we want everyone\'s presence,please encourage us by not being absent tomorrow.</string>
</resources>
