<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    tools:context=".OnBoarding.UserDetail">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="40dp">

        <ProgressBar
            android:id="@+id/user_detail_progress"
            style="@style/Widget.AppCompat.ProgressBar.Horizontal"
            android:layout_width="match_parent"
            android:layout_height="10dp"
            android:indeterminate="true"
            android:visibility="invisible"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/user_icon"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="35dp"
            android:elevation="8dp"
            android:src="@drawable/maleuser"
            app:civ_border_color="#000000"
            app:civ_border_width="2dp" />

        <EditText
            android:id="@+id/user_name"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_icon"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="27dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/name"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:maxLines="1"
            android:padding="11dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/user_rollno"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_name"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/roll_no"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="11dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/user_roomno"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_rollno"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/room_no"
            android:imeOptions="actionNext"
            android:inputType="number"
            android:padding="11dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/user_branch"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_roomno"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/branch"
            android:imeOptions="actionNext"
            android:inputType="text"
            android:padding="11dp"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/user_bloodgrp"
            android:layout_width="320dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_branch"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="9dp"
            android:background="@drawable/edittext_background"
            android:hint="@string/blood_group"
            android:imeOptions="actionDone"
            android:inputType="text"
            android:maxLength="4"
            android:padding="11dp"
            android:textColor="#000000" />

        <Button
            android:id="@+id/user_button"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_below="@id/user_bloodgrp"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="65dp"
            android:background="@drawable/onboarding_btn"
            android:text="Done"
            android:textColor="#FFFFFF"
            android:textStyle="bold" />
    </RelativeLayout>
</ScrollView>