<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="#fff"
    android:gravity="center">

    <RelativeLayout
        android:layout_width="match_parent"
        android:padding="15dp"
        android:background="#fff"
        android:layout_height="wrap_content">
        <ImageView
            android:id="@+id/cancel"
            android:layout_width="34dp"
            android:layout_height="34dp"
            android:layout_alignParentEnd="true"
            android:textSize="22sp"
            android:layout_marginEnd="5dp"
            android:src="@drawable/back"/>
        <ImageView
            android:id="@+id/popup_image"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:src="@drawable/illness"/>
        <TextView
            android:id="@+id/popup_header"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_centerHorizontal="true"
            android:text="Fever and Cold"
            android:layout_below="@id/popup_image"
            android:textColor="#163F8F"
            android:textSize="18sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/what_to_do"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="What to do:"
            android:layout_below="@id/popup_header"
            android:layout_marginTop="4dp"
            android:textColor="#163F8F"
            android:textSize="16sp"
            android:fontFamily="@font/amita_bold" />

        <TextView
            android:id="@+id/what_to_do_s"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/what_to_do"
            android:textColor="#000000"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginTop="4dp"
            android:textSize="13sp"
            android:text="@string/what_to_do_fever"/>

        <TextView
            android:id="@+id/medicine"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Medicines:"
            android:layout_below="@id/what_to_do_s"
            android:layout_marginTop="4dp"
            android:textColor="#163F8F"
            android:textSize="16sp"
            android:fontFamily="@font/amita_bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_below="@id/medicine"
            android:layout_marginEnd="18dp"
            android:orientation="vertical"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/medic_1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/m1_fever"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/medic_2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/m2_fever"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="6dp"
                android:orientation="horizontal">
                <TextView
                    android:id="@+id/medic_3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="#000000"
                    android:text="@string/m3_fever"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>
</LinearLayout>